# MUII-ATR-Reto1

./: .gitignore  CMakeLists.txt  README.md
actas/: reunion-19-09-24.txt
include/generator/: generator.hpp
include/sensor_model/: generator.hpp  sensor_data.hpp
src/: comparison.cpp  main.cpp  measurement_generator.cpp  noise_filtering.cpp
src/generator/: generator.cpp
src/sensor_model/: generator.cpp  sensor_data.cpp
